fix header on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -236,9 +236,8 @@ ul {
 
 /* <Inicio /> */
 .brand-banner {
-  width: calc(100% - 200px);
+  width: 100%;
   height: 200px;
-  position: fixed;
   top: 0;
   right: 0;
   transform: translate3d(0, 50px, 0);
@@ -270,9 +269,8 @@ ul {
 }
 
 .section-container {
-  transform: translate3d(0, 200px, 0);
+  transform: translate3d(0, 50px, 0);
   z-index: 99;
-  padding-top: 100px;
   background-color: white;
 }
 
